--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "datamaps",
+  "name": "thongdong7-datamaps",
   "main": "dist/datamaps.all.js",
   "main_dev": "src/rel/datamaps.world.js",
   "description": "datamaps with d3.js",
-  "version": "0.5.8",
+  "version": "0.0.1",
   "author": "Mark DiMarco<markmarkoh@gmail.com>",
   "contributors": [
     "Enrico Berti (https://github.com/enricoberti)",
@@ -25,6 +25,7 @@
     "topojson": "^1.6.19"
   },
   "devDependencies": {
+    "grunt-cli": "~1.2.0",
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
