--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "datamaps",
-  "version": "0.5.8",
+  "name": "thongdong7-datamaps",
+  "version": "0.0.1",
   "homepage": "https://github.com/markmarkoh/datamaps",
   "authors": [
     "Mark DiMarco <markmarkoh@gmail.com>"
